--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,61 @@ body {
   background: #FFFFFF;
   color: #676767;
   font-family: 'Quicksand', serif;
+  width: 87%;
+  margin: auto;
+  font-weight: 400;
+} 
+.links {
+  color: #5F91AF;
+  text-decoration: underline;
+}
+
+.footyTxt {
+  font-size: small;
+}
+
+.aboutTxt {
+  text-align: left;
+}
+
+/*the prompt generator button*/
+#generateButton {
+	background-color:#D0E0E9;
+	border-radius:13px;
+	display:inline-block;
+	cursor:pointer;
+	color:#676767;
+	padding:21px 51px;
+	text-decoration:none;
+}
+#generateButton:hover {
+  background-color:#5F91AF;
+  color: #FFFFFF;
+}
+#generateButton:active {
+	position:relative;
+	top:1px;
+}
+
+.divContainer{
+  padding: 10px 20px;
+}
+
+#thePromptContainer {
+  margin-top: 20px;
+  padding: 25px 50px;
+  border: 3px dotted #5F91AF;
+  border-radius: 10px;
+  display: inline-block;
+}
+
+#thePrompt{
+  font-weight: 600;
+  font-size: xx-large;
+}
+
+#theTimerContainer{
+  display: none;
 }
 
 /* Nav style */
@@ -14,3 +69,34 @@ body {
   .nav a:hover { color: #5F91AF; }
 
 .containerDesc { font-weight: 300; }
+
+/* theme list styles */
+#topicsGenerator ul {background: #FFFFFF;  margin: 0; overflow: hidden; padding: 0;}
+#topicsGenerator li {
+  display: inline-block; background-color: #5F91AF; 
+  padding: 10px 15px; border-radius: 25px; margin: 5px 5px;
+  color: #FFFFFF
+}
+  #topicsGenerator li:hover{
+    background-color: #D0E0E9;
+    color: #676767;
+  }
+
+.unChkdChkBx{
+  background-color: #D0E0E9 !important;
+  color: #FFFFFF !important;
+}
+
+.hiddenChkBx {
+  opacity: 0;
+  position: absolute;
+}
+
+.hideElement {
+  display: none;
+}
+
+#theError {
+  color: #B31570;
+  font-weight: bolder;
+}
